# oop-lab3-qutesweeper

./: .gitignore  CMakeLists.txt  README.md  gamestate.cpp  gamestate.hpp  gamewindow.cpp  gamewindow.fwd.hpp  gamewindow.hpp  gamewindow.ui  main.cpp  newgamedialog.cpp  newgamedialog.hpp  qutesweeperai.cpp  qutesweeperai.hpp  resources.qrc  rightclickablebutton.cpp  rightclickablebutton.hpp
